@@ -2,8 +2,9 @@
 TARGETOS = ppc-apple-macosx
 HOSTOS = ppc-apple-macosx
 
+# Build universal binaries
 # an old readline version is installed on the machine,
 # so I had to install new one (readline-5.2) to $(HOME)/local-$(HOSTNAME)
-TARGETLDFLAGS = "-L$(HOME)/local-$(HOSTNAME)/lib"
-TARGETCXXFLAGS = "-I$(HOME)/local-$(HOSTNAME)/include"
-TARGETCFLAGS = "-I$(HOME)/local-$(HOSTNAME)/include"
+TARGETLDFLAGS = "-isysroot /Developer/SDKs/MacOSX10.4u.sdk -arch i386 -arch ppc -L$(HOME)/local-$(HOSTNAME)/lib"
+TARGETCXXFLAGS = "-isysroot /Developer/SDKs/MacOSX10.4u.sdk -arch i386 -I$(HOME)/local-$(HOSTNAME)/include"
+TARGETCFLAGS = "-isysroot /Developer/SDKs/MacOSX10.4u.sdk -arch i386 -I$(HOME)/local-$(HOSTNAME)/include"
