@@ -2,22 +2,22 @@
 <html>
 <head>
   <meta content="text/html; charset=UTF-8" http-equiv="content-type" />
-  <title>SDCC - Nightly Snapshots</title>
+  <title>SDCC - Snapshot Builds</title>
   <link type="text/css" href="style.css" rel="stylesheet" />
   <link rel="shortcut icon" type="image/x-icon" href="/images/sdcc.ico" />
 </head>
 <body bgcolor="white" link="teal" vlink="#483d8b">
   <div align="left">
-    <h1>SDCC - Nightly Snapshots</h1>
+    <h1>SDCC - Snapshot Builde</h1>
     <table border="0" cellpadding="2" cellspacing="1" width="100%" bgcolor="white">
     <tbody>
       <tr>
         <td width="15%" valign="top"><?php echo(file_get_contents('./left_menu.inc'));?>
         </td>
         <td width="85%">
-          <h2><a name="What"></a>Automatically Updated Nightly Snapshots</h2>
+          <h2><a name="What"></a>Automatically Updated Snapshot Builds</h2>
           <p>
-These snapshots are automatically updated from the developmental
+These snapshot builds are automatically updated from the developmental
 code in the Subversion repository.  They are <i>not</i> official releases
 and should be considered "beta" quality.  Some may not even work
 at all if a serious bug was introduced during development, so
@@ -25,9 +25,9 @@ several are provided to give you the best chance of finding one
 that will work.
           </p>
           <p>
-Because official SDCC releases are infrequent, these snapshots
+Because official SDCC releases are infrequent, these snapshot builds
 often contain fixes for bugs discovered in the last official
-release.  If you do encounter a bug, please test the latest
+release. If you do encounter a bug, please test the latest
 snapshot build to see if it has already been fixed by a developer.
           </p>
           <p>
