@@ -89,7 +89,7 @@ SDCC Compiler User Guide
 \layout Date
 
 \size normal
-SDCC 2.6.4
+SDCC 2.6.5
 \size footnotesize
 
 \newline
@@ -944,8 +944,8 @@ The SDCC home page at
  Some of the other tools (simulator and assembler) included with SDCC contain
  their own documentation and can be found in the source distribution.
  If you want the latest unreleased software, the complete source package
- is available directly from Subversion on https://svn.sourceforge.net/svnroot/sdcc
-/trunk/sdcc.
+ is available directly from Subversion on https://sdcc.svn.sourceforge.net/svnroot/
+sdcc/trunk/sdcc.
 
 \layout Section
 Wishes for the future
@@ -1414,7 +1414,8 @@ open source,
 a gcc compiler and last but not least
 
 \layout Enumerate
-the binaries can be built by cross compiling on Sourceforge's compile farm.
+the binaries can be built by cross compiling on SDCC Distributed Compile
+ Farm.
 
 \layout Standard
 See the examples, how to pass the Win32 settings to 'configure'.
@@ -3484,17 +3485,17 @@ Building SDCC on Linux
 \series medium
 Download the source package
 \series default
- either from the SDCC Subversion repository or from the nightly snapshots
+ either from the SDCC Subversion repository or from snapshot builds
 \series medium
 , it will be named something like sdcc
 \series default
-.src
+-src
 \series medium
-.t
+-yyyymmdd-rrrr.t
 \series default
 ar.
 \series medium
-gz
+bz2
 \series default
  
 \begin_inset LatexCommand \url{http://sdcc.sourceforge.net/snap.php}
@@ -3514,10 +3515,12 @@ Bring up a command line terminal, such as xterm.
 Unpack the file using a command like: 
 \family sans
 \series bold
-"tar -xvzf sdcc.src.tar.gz
+"tar -xvzf sdcc-src-yyyymmdd-rrrr.tar.bz2
+\begin_inset Quotes srd
+\end_inset
+
+
 \family default
-\series default
-"
 \series medium
 , this will create a sub-directory called sdcc with all of the sources.
 
@@ -3794,7 +3797,7 @@ Building SDCC Using Microsoft Visual C++ 6.0/NET (MSVC)
 Download the source package
 \series default
  either from the SDCC Subversion repository or from the 
-\begin_inset LatexCommand \url[nightly snapshots]{http://sdcc.sourceforge.net/snap.php}
+\begin_inset LatexCommand \url[snapshot builds]{http://sdcc.sourceforge.net/snap.php}
 
 \end_inset
 
@@ -3802,9 +3805,9 @@ Download the source package
 \series medium
 , it will be named something like sdcc
 \series default
-.src
+-src
 \series medium
-.tgz.
+-yyyymmdd-rrrr.tar.bz2.
 
 \series default
  SDCC is distributed with all the projects, workspaces, and files you need
@@ -15285,7 +15288,7 @@ The inline assembler code can contain any valid code understood by the assembler
 \end_inset
 
  or online at 
-\begin_inset LatexCommand \url{http://svn.sourceforge.net/viewvc/*checkout*/sdcc/trunk/sdcc/as/doc/asxhtm.html}
+\begin_inset LatexCommand \url{http://sdcc.svn.sourceforge.net/viewvc/*checkout*/sdcc/trunk/sdcc/as/doc/asxhtm.html}
 
 \end_inset
 
@@ -24711,19 +24714,10 @@ The PIC16 Port currently does not pass SDCC's regression test
 
 \end_inset
 
-) and thus the nightly regression tests for the PIC16 target are currently
- disabled for all hosts except for 
+) and thus the snapshot build regression tests for the PIC16 target are
+ currently disabled for all hosts
 \emph on
-Linux on Opteron.
-
-\emph default
- This means you can see the result of the PIC16 regression tests f.e.
- by checking the log files in 
-\begin_inset LatexCommand \url{http://sdcc.sourceforge.net/regression_test_results/amd64-unknown-linux2.3/}
-
-\end_inset
-
- (pick the most up to date file there, scroll down, lend a hand).
+.
 
 \layout Chapter
 Debugging
@@ -25396,7 +25390,7 @@ g
 raphics File 
 \size footnotesize
 
-\begin_inset LatexCommand \url{http://svn.sourceforge.net/viewcvs.cgi/*checkout*/sdcc/trunk/sdcc/doc/figures/ddd_example.png}
+\begin_inset LatexCommand \url{http://sdcc.svn.sourceforge.net/viewvc/*checkout*/sdcc/trunk/sdcc/doc/figures/ddd_example.png}
 
 \end_inset
 
@@ -26523,14 +26517,14 @@ check the device specific header files
 \end_inset
 
 > 
-\begin_inset LatexCommand \url{http://svn.sourceforge.net/viewvc/sdcc/trunk/sdcc/device/include/mcs51/compiler.h?view=markup}
+\begin_inset LatexCommand \url{http://sdcc.svn.sourceforge.net/viewvc/sdcc/trunk/sdcc/device/include/mcs51/compiler.h?view=markup}
 
 \end_inset
 
  to allow using common header files.
  (see f.e.
  cc2510fx.h 
-\begin_inset LatexCommand \url{http://svn.sourceforge.net/viewvc/sdcc/trunk/sdcc/device/include/mcs51/cc2510fx.h?view=markup}
+\begin_inset LatexCommand \url{http://sdcc.svn.sourceforge.net/viewvc/sdcc/trunk/sdcc/device/include/mcs51/cc2510fx.h?view=markup}
 
 \end_inset
 
@@ -27209,7 +27203,7 @@ online at:
 
 \newline
 
-\begin_inset LatexCommand \url{http://svn.sourceforge.net/viewvc/*checkout*/sdcc/trunk/sdcc/ChangeLog}
+\begin_inset LatexCommand \url{http://sdcc.svn.sourceforge.net/viewvc/*checkout*/sdcc/trunk/sdcc/ChangeLog}
 
 \end_inset
 
@@ -27265,7 +27259,7 @@ online at:
 
 \newline
 
-\begin_inset LatexCommand \url{http://svn.sourceforge.net/viewvc/*checkout*/sdcc/trunk/sdcc/as/doc/asxhtm.html}
+\begin_inset LatexCommand \url{http://sdcc.svn.sourceforge.net/viewvc/*checkout*/sdcc/trunk/sdcc/as/doc/asxhtm.html}
 
 \end_inset
 
@@ -27338,7 +27332,7 @@ online at:
 
 \newline
 
-\begin_inset LatexCommand \url{http://svn.sourceforge.net/viewvc/sdcc/trunk/sdcc/doc/}
+\begin_inset LatexCommand \url{http://sdcc.svn.sourceforge.net/viewvc/sdcc/trunk/sdcc/doc/}
 
 \end_inset
 
@@ -27377,7 +27371,7 @@ online at
 :
 \newline
 
-\begin_inset LatexCommand \url{http://svn.sourceforge.net/viewvc/*checkout*/sdcc/trunk/sdcc/debugger/README}
+\begin_inset LatexCommand \url{http://sdcc.svn.sourceforge.net/viewvc/*checkout*/sdcc/trunk/sdcc/debugger/README}
 
 \end_inset
 
@@ -27433,7 +27427,7 @@ online at:
 
 \newline
 
-\begin_inset LatexCommand \url{http://svn.sourceforge.net/viewvc/*checkout*/sdcc/trunk/sdcc/sim/ucsim/doc/index.html}
+\begin_inset LatexCommand \url{http://sdcc.svn.sourceforge.net/viewvc/*checkout*/sdcc/trunk/sdcc/sim/ucsim/doc/index.html}
 
 \end_inset
 
@@ -27472,7 +27466,7 @@ online at:
 
 \emph default
 
-\begin_inset LatexCommand \url{http://svn.sourceforge.net/viewvc/*checkout*/sdcc/trunk/sdcc/src/pic16/NOTES}
+\begin_inset LatexCommand \url{http://sdcc.svn.sourceforge.net/viewvc/*checkout*/sdcc/trunk/sdcc/src/pic16/NOTES}
 
 \end_inset
 
@@ -28953,7 +28947,7 @@ You can follow the status of the Subversion version
  in the Subversion repository
 \size footnotesize
  
-\begin_inset LatexCommand \htmlurl{http://svn.sourceforge.net/viewcvs.cgi/*checkout*/sdcc/trunk/sdcc/ChangeLog}
+\begin_inset LatexCommand \htmlurl{http://sdcc.svn.sourceforge.net/viewcvs.cgi/*checkout*/sdcc/trunk/sdcc/ChangeLog}
 
 \end_inset
 
@@ -29102,7 +29096,7 @@ Quality control
 
 
 \layout Standard
-The compiler is passed through nightly compile and build checks.
+The compiler is passed through snaphot build compile and build checks.
  The so called 
 \shape italic
 regression tests
